--- a/examples/providerconfig/providerconfig.yaml
+++ b/examples/providerconfig/providerconfig.yaml
@@ -6,6 +6,6 @@ spec:
   credentials:
     source: Secret
     secretRef:
-      name: example-creds
-      namespace: crossplane-system
+      name: imperva-creds
+      namespace: upbound-system
       key: credentials
