--- a/package/crds/incapsula.crossplane.io_providerconfigusages.yaml
+++ b/package/crds/incapsula.crossplane.io_providerconfigusages.yaml
@@ -4,9 +4,9 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.13.0
-  name: providerconfigusages.incapsula.upbound.io
+  name: providerconfigusages.incapsula.crossplane.io
 spec:
-  group: incapsula.upbound.io
+  group: incapsula.crossplane.io
   names:
     categories:
     - crossplane
